# option-meme

./: .claude_history  .gitignore  README.md  dashboard.sh  optionmeme  pyproject.toml  run.sh  run_pipeline.py
config/: settings.py
config/symbols/: kr_symbols.csv
dashboard/: app.py  data_loader.py
dashboard/components/: charts.py  filters.py
dashboard/pages/: 1_Raw_Data.py  1_원시_데이터.py  2_Labeling.py  2_라벨링.py  3_Features.py  4_Model_Performance.py  5_Predictions.py
docs/: PLAN-20260320_210912.md  PLAN-BACKTEST-20260321_171012.md  RESULT-BACKTEST-20260321_175639.md
src/: run_pipeline.py
src/backtest/: README.md  analyzer.py  engine.py  market_data.py  result.py  strategy.py  types.py
src/collector/: bar_fetcher.py  collection_tracker.py  resampler.py  stock_info_db.py  storage.py  tv_client.py
src/config/: settings.py  variants.py
src/dashboard/: app.py  data_loader.py
src/features/: feature_pipeline.py  price_features.py  technical_features.py  time_features.py  volume_features.py
src/inference/: predict.py
src/labeler/: label_generator.py  peak_trough_detector.py  session_extractor.py
src/model/: calibrate.py  dataset.py  ensemble.py  evaluate.py  train_gbm.py  train_lstm.py
src/trading/: engine.py  option_pricer.py  signal_detector.py  trade_db.py  trade_tracker.py
tests/: conftest.py
tests/backtest/: conftest.py  test_analyzer.py  test_engine.py  test_executor_backtest.py  test_executor_base.py  test_market_data.py  test_result.py  test_strategy.py  test_strategy_base.py  test_strategy_call_buy.py  test_strategy_filtered_put.py  (+3 more)
(+69 files in other folders)
