[project]
name = "option-meme"
version = "0.1.0"
description = "Detect price turning points (peak/trough) in early regular trading sessions"
requires-python = ">=3.10"
dependencies = [
    # Data collection (tvDatafeed: install separately via pip install --upgrade --no-cache-dir git+https://github.com/StreamAlpha/tvdatafeed.git)
    "yfinance>=0.2.0",
    "pykrx>=1.0.0",
    # Data processing
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "ta>=0.11",
    # ML
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "torch>=2.0",
    "optuna>=3.4",
    # Utilities
    "exchange-calendars>=4.5",
    "tqdm>=4.66",
    "loguru>=0.7",
    "matplotlib>=3.8",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "black",
    "ruff",
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "streamlit>=1.30",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
